Add decorators to sidebar

--- a/_data/sidebars/lb4_sidebar.yml
+++ b/_data/sidebars/lb4_sidebar.yml
@@ -47,6 +47,10 @@ children:
   - title: 'Repositories'
     url: /doc/en/lb4/Repositories.html
     output: 'web, pdf'
+  
+  - title: 'Decorators'
+    url: /doc/en/lb4/Decorators.html
+    output: 'web, pdf'
 
 - title: 'Getting started'
   url: /doc/en/lb4/Getting-started.html
